<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.login.RegisterFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nameApp"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_10dp"
            android:text="@string/shopapp"
            app:drawableStartCompat="@drawable/ic_kleine_shape"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical2"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical1"
            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <TextView
            android:id="@+id/titleRegister"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="@+id/nameApp"
            app:layout_constraintStart_toStartOf="@+id/nameApp"
            app:layout_constraintTop_toBottomOf="@+id/nameApp" />

        <TextView
            android:id="@+id/loginNow"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/do_you_have_an_account_log_in"
            app:layout_constraintEnd_toEndOf="@+id/nameApp"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="@+id/nameApp"
            app:layout_constraintTop_toBottomOf="@+id/titleRegister" />

        <EditText
            android:id="@+id/firstName"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50dp"
            android:autofillHints="name"
            android:ems="10"

            android:hint="@string/first_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
            app:layout_constraintTop_toBottomOf="@+id/loginNow"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/lastName"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:ems="10"
            android:hint="@string/last_name"

            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#78909C"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
            app:layout_constraintTop_toBottomOf="@+id/firstName"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/email"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAccessibility="yes"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#78909C"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical2"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical1"
            app:layout_constraintTop_toBottomOf="@+id/lastName"
            tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/password"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:ems="10"

            android:hint="@string/password"
            android:importantForAccessibility="yes"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical2"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical1"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:ignore="Autofill,TextFields,TextContrastCheck,VisualLintTextFieldSize"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30"
            android:text="@string/register"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
            app:layout_constraintTop_toBottomOf="@+id/password"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

        <ImageView
            android:id="@+id/loginWithFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facebook_login"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
            app:layout_constraintTop_toTopOf="@+id/loginWithGoogle"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <ImageView
            android:id="@+id/loginWithGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:src="@drawable/google_login"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical2"
            app:layout_constraintTop_toBottomOf="@+id/register"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            app:layout_constraintBottom_toBottomOf="@+id/loginWithFacebook"
            app:layout_constraintEnd_toEndOf="@+id/loginWithFacebook"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical1"
            app:layout_constraintTop_toTopOf="@+id/loginWithFacebook" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            app:layout_constraintBottom_toBottomOf="@+id/loginWithGoogle"
            app:layout_constraintEnd_toEndOf="@+id/loginWithGoogle"
            app:layout_constraintStart_toStartOf="@+id/loginWithGoogle"
            app:layout_constraintTop_toTopOf="@+id/loginWithGoogle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>