<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.shopping.cart.CartFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listCart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_5dp"
        android:contentDescription="TODO"
        android:paddingTop="@dimen/_5dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText"
        tools:listitem="@layout/item_cart_product" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/add_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/g_blue"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtEmptyCart"
        style="@style/h2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_empty_cart"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewCheckout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/total_box_background"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline13"
        app:layout_constraintVertical_bias="0.272"
        tools:ignore="TextSizeCheck"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/titleTotal"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/total"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline14"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/total"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_000_000_vn"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/titleTotal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/titleTotal"
            app:layout_constraintTop_toTopOf="@+id/titleTotal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/checkOut"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:text="@string/check_out"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline14"
            tools:ignore="VisualLintButtonSize" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86" />
</androidx.constraintlayout.widget.ConstraintLayout>